--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -21,11 +21,13 @@
 
 	<resource-env-ref>
 		<resource-env-ref-name>BeanManager</resource-env-ref-name>
-		<resource-env-ref-type>javax.enterprise.inject.spi.BeanManager</resource-env-ref-type>
+		<resource-env-ref-type>javax.enterprise.inject.spi.BeanManager
+		</resource-env-ref-type>
 	</resource-env-ref>
 
 	<listener>
-		<listener-class>org.jboss.weld.environment.servlet.Listener</listener-class>
+		<listener-class>org.jboss.weld.environment.servlet.Listener
+		</listener-class>
 	</listener>
 
 	<servlet>
