--- a/pweb-2023.2-jsf/pom.xml
+++ b/pweb-2023.2-jsf/pom.xml
@@ -1,7 +1,7 @@
 <project xmlns="https://maven.apache.org/POM/4.0.0" xmlns:xsi="https://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>br.com.upe.es</groupId>
-  <artifactId>jsf-project</artifactId>
+  <artifactId>pweb-2023.2-jsf</artifactId>
   <version>0.0.1-SNAPSHOT</version>
   <packaging>war</packaging>
   
